--- a/.github/workflows/trigger-docs-rebuild-redeploy.yml
+++ b/.github/workflows/trigger-docs-rebuild-redeploy.yml
@@ -1,20 +1,16 @@
-name: Trigger rebuild and redeployment of Apiman docs website
-
-on:
-  push:
-    branches: [ master, 3.x, 2.x ] # Put all branches we want to track docs for here.
-    paths:
-      - 'docs/**'
-  workflow_dispatch:
-
 jobs:
   sendRebuildDispatchEvent:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Send rebuild-apiman-antora-docs repository dispatch event to apiman/apiman-docs to trigger the Apiman Antora docs to be rebuilt and redeployed.
-        uses: peter-evans/repository-dispatch@v1.1.3
-        with:
-          token: ${{ secrets.REPO_DISPATCH_ACCESS_TOKEN }}
-          repository: apiman/apiman-docs
-          event-type: rebuild-apiman-antora-docs
-
+    - continue-on-error: true
+      name: Send rebuild-apiman-antora-docs repository dispatch event to apiman/apiman-docs
+        to trigger the Apiman Antora docs to be rebuilt and redeployed.
+      uses: peter-evans/repository-dispatch@v1.1.3
+      with:
+        event-type: rebuild-apiman-antora-docs
+        repository: apiman/apiman-docs
+        token: ${{ secrets.REPO_DISPATCH_ACCESS_TOKEN }}
+name: Trigger rebuild and redeployment of Apiman docs website
+on:
+  repository_dispatch:
+    types: trigger-ga___trigger-docs-rebuild-redeploy.yml
