--- a/.github/workflows/apiman-db-tests.yaml
+++ b/.github/workflows/apiman-db-tests.yaml
@@ -1,61 +1,46 @@
-name: Apiman Database Tests
-on:
-  push:
-    paths-ignore:
-      - '.gitignore'
-      - 'LICENSE'
-      - 'README*'
-      - 'CODE_OF_CONDUCT*'
-    branches: [master, 3.x]
-  pull_request:
-    paths-ignore:
-      - '.github/**'
-      - '.gitignore'
-      - 'LICENSE'
-      - 'README*'
-      - 'CODE_OF_CONDUCT*'
-    branches: [master, 3.x]
-
 jobs:
   apiman-manager-db-tests:
-    runs-on: ubuntu-latest
     name: Apiman Manager Database Test
+    runs-on: self-hosted
+    steps:
+    - continue-on-error: true
+      name: Checkout Code
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        submodules: true
+    - continue-on-error: true
+      name: Set up `mvn`
+      run: bash .github/workflows/support/set-mvn-location.sh
+    - continue-on-error: true
+      name: Set up JDK 11
+      uses: actions/setup-java@v3
+      with:
+        cache: maven
+        distribution: temurin
+        java-version: 11
+    - continue-on-error: true
+      name: Build Apiman (without tests)
+      run: mvn clean install -DskipTests -Dmaven.javadoc.skip
+    - continue-on-error: true
+      env:
+        TAG: ${{ matrix.database.tag }}
+      name: Run Apiman Manager Tests ${{ matrix.database.name }}
+      run: 'cd manager/test/api
 
+        mvn test -Dapiman.test.manager.database=postgres -Dapiman.test.manager.database.image=$TAG
+
+        '
     strategy:
       matrix:
         database:
-          - name: Postgres Latest
-            tag: "postgres:latest"
-
-          - name: Postgres 15
-            tag: "postgres:15"
-
-          - name: Postgres 11
-            tag: "postgres:11"
-
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-          fetch-depth: 0
-
-      - name: Set up `mvn`
-        run: bash .github/workflows/support/set-mvn-location.sh
-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 11
-          cache: maven
-
-      - name: Build Apiman (without tests)
-        run: mvn clean install -DskipTests -Dmaven.javadoc.skip
-
-      - name: Run Apiman Manager Tests ${{ matrix.database.name }}
-        env:
-          TAG: ${{ matrix.database.tag }}
-        run: |
-          cd manager/test/api
-          mvn test -Dapiman.test.manager.database=postgres -Dapiman.test.manager.database.image=$TAG
+        - name: Postgres Latest
+          tag: postgres:latest
+        - name: Postgres 15
+          tag: postgres:15
+        - name: Postgres 11
+          tag: postgres:11
+name: Apiman Database Tests
+on:
+  repository_dispatch:
+    types: trigger-ga___apiman-db-tests.yaml
