--- a/.github/workflows/portal-verify.yml
+++ b/.github/workflows/portal-verify.yml
@@ -1,63 +1,42 @@
-# This is a basic workflow to help you get started with Actions
-
-name: Verify Build Workflow
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
-on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   Build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: self-hosted
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '16'
-          cache: 'npm'
-          check-latest: true
-      - name: Install node modules
-        run: npm ci
-      - name: Do local build
-        run: npm run-script build
-      - name: Do production build
-        run: npm run-script build-production
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      uses: actions/setup-node@v2-beta
+      with:
+        cache: npm
+        check-latest: true
+        node-version: '16'
+    - continue-on-error: true
+      name: Install node modules
+      run: npm ci
+    - continue-on-error: true
+      name: Do local build
+      run: npm run-script build
+    - continue-on-error: true
+      name: Do production build
+      run: npm run-script build-production
   Lint:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '16'
-          cache: 'npm'
-          check-latest: true
-      - name: Install node modules
-        run: npm ci
-      - name: Install node modules
-        run: npm run-script lint
-
-#  Publish:
-#    needs: [Build, Lint]
-#    runs-on: ubuntu-latest
-#    if: github.ref == 'refs/heads/main' && github.repository_owner == 'Apiman'
-#    steps:
-#      - uses: actions/checkout@v2
-#      - name: Building Docker Images
-#        run: docker build -t="apiman/developer-portal:latest" -t="ghcr.io/apiman/developer-portal:latest" .
-#      - name: Push The Tagged Docker Images
-#        run: |
-#          echo ${{ secrets.DOCKERHUB_PASSWORD }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-#          docker push apiman/developer-portal:latest
-#
-#          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
-#          docker push ghcr.io/apiman/developer-portal:latest
+    - continue-on-error: true
+      uses: actions/checkout@v3
+    - continue-on-error: true
+      uses: actions/setup-node@v2-beta
+      with:
+        cache: npm
+        check-latest: true
+        node-version: '16'
+    - continue-on-error: true
+      name: Install node modules
+      run: npm ci
+    - continue-on-error: true
+      name: Install node modules
+      run: npm run-script lint
+name: Verify Build Workflow
+on:
+  repository_dispatch:
+    types: trigger-ga___portal-verify.yml
